finished users api, project repository template
