# internal/api/auth/types.go
@@ -8,9 +8,9 @@ import (
 
 type (
 	createUserRequest struct {
-		UserName string   `json:"username"`
-		Password string   `json:"password"`
-		Roles    []string `json:"roles"`
+		UserName string            `json:"username"`
+		Password string            `json:"password"`
+		Roles    []entity.BigIntPK `json:"roles"`
 	}
 	createUserResponse struct {
 		Id        entity.BigIntPK `json:"id"`
@@ -18,10 +18,10 @@ type (
 	}
 
 	listUsersResponseItem struct {
-		Id        entity.BigIntPK `json:"id"`
-		UserName  string          `json:"username"`
-		CreatedAt time.Time       `json:"created_at"`
-		Roles     []string        `json:"roles"`
+		Id        entity.BigIntPK   `json:"id"`
+		UserName  string            `json:"username"`
+		CreatedAt time.Time         `json:"created_at"`
+		Roles     []entity.BigIntPK `json:"roles"`
 	}
 
 	authRequest struct {
@@ -30,5 +30,30 @@ type (
 	}
 	authResponse struct {
 		Token string `json:"token"`
+	}
+
+	roleCreateRequest struct {
+		Name    string            `json:"name"`
+		Desc    *string           `json:"desc"`
+		PermIds []entity.BigIntPK `json:"perm_ids"`
+	}
+	roleCreateResponse struct {
+		Id entity.BigIntPK `json:"id"`
+	}
+
+	listRoleResponseItem struct {
+		Id      entity.BigIntPK   `json:"id"`
+		Name    string            `json:"name"`
+		Desc    *string           `json:"desc"`
+		PermIds []entity.BigIntPK `json:"perm_ids"`
+	}
+
+	updateRoleRequest struct {
+		Name    string            `json:"name"`
+		Desc    *string           `json:"desc"`
+		PermIds []entity.BigIntPK `json:"perm_ids"`
+	}
+	updateRoleResponse struct {
+		// updated_at, row_index...
 	}
 )
